@@ -1502,6 +1502,7 @@ linkEdit (char **envp)
   const char *s;
   struct dbuf_s linkerScriptFileName;
   struct dbuf_s binFileName;
+  char *buf;
 
   dbuf_init (&linkerScriptFileName, PATH_MAX);
   dbuf_init (&binFileName, PATH_MAX);
@@ -1798,18 +1799,16 @@ linkEdit (char **envp)
       buildCmdLine (buffer2, port->linker.cmd, buffer3, dbuf_c_str (&binFileName), (libSet ? joinStrSet (libSet) : NULL),
                     linkOptionsSet);
 
-      //buildCmdLine2 (buffer, sizeof (buffer), buffer2);
-      buildMacros (buffer, buffer2, sizeof (buffer));
+      buf = buildMacros (buffer2);
     }
   else
     {
-      //buildCmdLine2 (buffer, sizeof (buffer), port->linker.mcmd);
-      buildMacros (buffer, port->linker.mcmd, sizeof (buffer));
+      buf = buildMacros (port->linker.mcmd);
     }
 
   dbuf_destroy (&linkerScriptFileName);
 
-  system_ret = sdcc_system (buffer);
+  system_ret = sdcc_system (buf);
 
   /* if the binary file name is defined,
      rename the linker output file name to binary file name */
@@ -1849,6 +1848,7 @@ assemble (char **envp)
   else
     {
       char buf[PATH_MAX * 2];
+      char *b;
 
       /* build assembler output filename */
       dbuf_init (&asmName, PATH_MAX);
@@ -1868,16 +1868,16 @@ assemble (char **envp)
         {
           buildCmdLine (buf, port->assembler.cmd, dstFileName, dbuf_c_str (&asmName),
                     options.debug ? port->assembler.debug_opts : port->assembler.plain_opts, asmOptionsSet);
+          b = buf;
         }
       else
         {
-          //buildCmdLine2 (buf, sizeof (buf), port->assembler.mcmd);
-          buildMacros (buffer, port->assembler.mcmd, sizeof (buffer));
+          b = buildMacros (port->assembler.mcmd);
         }
 
       dbuf_destroy (&asmName);
 
-      if (sdcc_system (buf))
+      if (sdcc_system (b))
         {
           /* either system() or the assembler itself has reported an error */
           exit (EXIT_FAILURE);
@@ -1892,7 +1892,7 @@ assemble (char **envp)
              http://sourceforge.net/tracker/?func=detail&aid=3018645&group_id=41924&atid=431665
              TODO: This code should be removed when the next gputils version
              after gpasm-0.13.7 beta will be released */
-	  struct dbuf_s outName;
+          struct dbuf_s outName;
           dbuf_init (&outName, PATH_MAX);
           dbuf_printf (&outName, "%s%s", dstFileName, port->linker.rel_ext);
 
@@ -1921,6 +1921,7 @@ preProcess (char **envp)
     {
       const char *s;
       set *inclList = NULL;
+      char *buf;
 
       if (NULL != port->linker.rel_ext)
         {
@@ -2062,12 +2063,11 @@ preProcess (char **envp)
 
       if (options.verbose)
         printf ("sdcc: Calling preprocessor...\n");
-      //buildCmdLine2 (buffer, sizeof (buffer), _preCmd);
-      buildMacros (buffer, _preCmd, sizeof (buffer));
+      buf = buildMacros (_preCmd);
 
       if (preProcOnly)
         {
-          if (sdcc_system (buffer))
+          if (sdcc_system (buf))
             {
               exit (EXIT_FAILURE);
             }
@@ -2075,7 +2075,7 @@ preProcess (char **envp)
           exit (EXIT_SUCCESS);
         }
 
-      yyin = sdcc_popen (buffer);
+      yyin = sdcc_popen (buf);
       if (yyin == NULL)
         {
           perror ("Preproc file not found");
